--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -75,6 +75,10 @@
     gap: 0 22px;
     width: 100%;
 
+    @media (max-width: 600px) {
+      gap: 0 80px;
+    }
+
     @media (min-width: 1279px) {
       gap: 0 60px;
     }
