--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -2,23 +2,23 @@
   &__container {
     display: flex;
     justify-content: space-between;
-    align-items: flex-end;
+    align-items: flex-start;
     margin: 0 auto;
     padding: 0 20px;
     max-width: 1570px;
-  
+
     @media (min-width: 767px) {
       padding: 0 34px;
     }
-  
+
     @media (min-width: 1279px) {
       padding: 0 55px;
     }
-  
+
     @media (min-width: 1440px) {
       padding: 0 136px;
     }
-  
+
     @media (min-width: 1670px) {
       padding: 0;
     }
@@ -48,6 +48,10 @@
       display: flex;
       gap: 50px;
     }
+  }
+
+  &__list-item {
+    margin-top: 20px;
   }
  
   &__link {
