--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  height: 450px;
+  min-height: 450px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -11,6 +11,11 @@
 
   @media only screen and (max-width: 1100px) {
     flex-direction: column;
+  }
+
+  @media only screen and (max-width: 500px) {
+    min-height: 600px;
+    padding: 0 20px;
   }
 
   &__line {
@@ -40,7 +45,15 @@
     }
 
     @media only screen and (max-width: 500px) {
-      gap: 20px;
+      gap: 15px;
+      margin-top: 160px;
+    }
+  }
+
+  &__center-left-block {
+    @media only screen and (max-width: 500px) {
+      min-height: 196px;
+      margin-bottom: 70px;
     }
   }
 
@@ -50,11 +63,17 @@
 
   &__center-left-text {
     min-width: 170px;
-    height: 115px;
+    min-height: 115px;
     font-weight: normal;
     font-size: 14px;
     line-height: 150%;
     margin-bottom: 20px;
+    @media only screen and (max-width: 500px) {
+      min-width: 130px;
+      max-width: 170px;
+      width: 100%;
+      min-height: 103px;
+    }
   }
 
   &__center-middle-text {
