--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -24,8 +24,8 @@
   &__burger-logo-container {
     position: absolute;
     top: 2%;
-    right: 0;
-    left: 0;
+    right: 8%;
+    left: 8%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -38,6 +38,11 @@
     font-weight: bold;
     line-height: 100%;
     color: #0f0e08;
+  }
+
+  &__uil-bars {
+    width: 24px;
+    height: 24px;
   }
 
   &__burger {
