--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -20,6 +20,7 @@ html {
   font-family: IBM Plex Sans, sans-serif;
   font-style: normal;
   font-weight: 500;
+  scroll-behavior: smooth;
 }
 
 .cursor {
@@ -49,7 +50,6 @@ h4 {
   display: flex;
   flex-direction: column;
   margin-bottom: 70px;
-  scroll-behavior: smooth;
 
   &__top {
     display: flex;
@@ -66,6 +66,7 @@ h4 {
     font-size: 30px;
     margin: 0 auto;
     z-index: 6;
+    height: 75px;
   }
 
   &__burger {
@@ -87,7 +88,6 @@ h4 {
       width: 40px;
       transform: rotate(360deg);
       transition: transform 0.5s linear;
-      scroll-behavior: smooth;
     }
   }
 
@@ -137,7 +137,7 @@ h4 {
     color: #fff;
     text-transform: uppercase;
     text-decoration: none;
-    scroll-behavior: smooth;
+    
 
     &--size {
       font-size: 16px;
@@ -720,6 +720,7 @@ h4 {
     font-size: 30px;
     text-decoration: none;
     color: black;
+    height: 72px;
 
     @media (min-width: 768px) {
       padding-bottom: 61px;
