--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -9,7 +9,28 @@
   &__picture {
     object-fit: cover;
 
+    &--1 {
+      width: 100%;
+      object-fit: contain;
+    }
+
     &--2 {
+      display: none;
+    }
+
+    &--3 {
+      display: none;
+    }
+
+    &--4 {
+      display: none;
+    }
+
+    &--5 {
+      display: none;
+    }
+
+    &--6 {
       display: none;
     }
   }
@@ -46,10 +67,36 @@
     background-color: $blackColor;
   }
 
-  @media (min-width: 767px) {
+  @media (min-width: 600px) {
+    &__picture--1 {
+      width: 50%;
+    }
+    &__picture--3 {
+      display: block;
+      width: 50%;
+      object-fit: contain;
+    }
+  }
+
+  @media (min-width: 900px) {
     &__picture {
-      width: 340px;
-      height: 543px;
+      width: 280px;
+      height: 450px;
+
+      &--1 {
+        display: block;
+        width: 33%;
+      }
+
+      &--3 {
+        display: block;
+        width: 33%;
+      }
+
+      &--4 {
+        display: block;
+        width: 33%;
+      }
     }
   }
 
