--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,7 +1,7 @@
 .footer {
   display: flex;
   flex-direction: column;
-  padding: 50px 55px;
+  padding: 15px 20px;
   @extend %IBM-footer;
 
   &__media {
@@ -102,6 +102,10 @@
     &:hover::after {
       background-color: $letterColor;
     }
+  }
+
+  @media (min-width: 550px) {
+    padding: 50px 55px;
   }
 
   @media (min-width: 767px) {
