--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  padding: 0 35px;
   gap: 0 130px;
 
   @media only screen and (max-width: 1380px) {
@@ -10,12 +11,35 @@
   }
 
   @media only screen and (max-width: 1100px) {
-    flex-direction: column;
+    flex-direction: row;
   }
 
-  @media only screen and (max-width: 500px) {
+  @media only screen and (max-width: 700px) {
+    flex-direction: column;
     min-height: 600px;
     padding: 0 20px;
+  }
+
+  &__container-for-block {
+    min-height: 450px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 0 35px;
+    gap: 0 130px;
+
+    @media only screen and (max-width: 1380px) {
+      gap: 0 61px;
+    }
+
+    @media only screen and (max-width: 1100px) {
+      flex-direction: column;
+    }
+
+    @media only screen and (max-width: 500px) {
+      min-height: 600px;
+      padding: 0 20px;
+    }
   }
 
   &__line {
@@ -46,7 +70,30 @@
 
     @media only screen and (max-width: 500px) {
       gap: 15px;
-      margin-top: 160px;
+      margin-top: 0;
+    }
+  }
+
+  &__left-container {
+    display: flex;
+    flex-direction: column;
+    gap: 62px;
+    max-width: 100px;
+    @media only screen and (max-width: 700px) {
+      justify-content: space-between;
+      max-width: 600px;
+      width: 100%;
+      flex-direction: row;
+      padding: 20px;
+    }
+  }
+
+  &__logo-container-instgram-facebook {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    @media only screen and (max-width: 700px) {
+      gap: 40px;
     }
   }
 
@@ -87,7 +134,7 @@
 
   &__center-right-text {
     min-width: 170px;
-    height: 115px;
+    max-height: 115px;
     font-weight: normal;
     font-size: 14px;
     line-height: 150%;
@@ -117,6 +164,39 @@
       font-size: 14px;
       line-height: 100%;
       margin-bottom: 20px 0;
+    }
+  }
+}
+
+.copiryght {
+  &__footer-container {
+    max-width: 1300px;
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0 90px;
+    @media only screen and (max-width: 1100px) {
+      margin-top: 100px;
+    }
+    @media only screen and (max-width: 700px) {
+      flex-direction: column;
+      justify-content: center;
+    }
+  }
+
+  &--for-museum {
+    margin-bottom: 40px;
+  }
+
+  &__text-design-by {
+    font-weight: 300;
+    font-size: 12px;
+    line-height: 140.62%;
+    @media only screen and (max-width: 700px) {
+      text-align: center;
+      margin-top: 14px;
     }
   }
 }
