--- a/src/styles/blocks/content-main.scss
+++ b/src/styles/blocks/content-main.scss
@@ -108,6 +108,13 @@
     }
   }
 
+  &__galery-sub-header {
+    color: #1a5a4c;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 150%;
+  }
+
   &__galery-text-header {
     display: flex;
     gap: 26px;
@@ -170,6 +177,7 @@
     font-weight: 300;
     font-size: 16px;
     line-height: 150%;
+    color: #4e4e4e;
   }
 
   &__photo-center-container {
@@ -192,6 +200,7 @@
     width: 570px;
     height: 204px;
     background-color: #fff;
+    border-bottom: 1px solid black;
     @media only screen and (max-width: 750px) {
       margin-left: -139px;
       top: 80%;
