--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -3,6 +3,7 @@
   padding-right: 0;
   margin: 0 auto;
   max-width: 2000px;
+  background-color: #fff;
 }
 
 .header {
@@ -161,6 +162,7 @@
     font-family: "IBM Plex Sans", sans-serif;
     font-size: 16px;
     font-weight: 500;
+    color: #0f0e08;
     @media only screen and (max-width: 700px) {
       width: 230px;
       height: 50px;
