--- a/src/styles/blocks/content-main.scss
+++ b/src/styles/blocks/content-main.scss
@@ -3,7 +3,6 @@
   width: 100%;
   margin: 0 auto;
   padding: 200px 22px 0;
-  border: 1px solid black;
 
   &__title {
     font-weight: bold;
@@ -72,6 +71,12 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    transition: box-shadow 0.2s, transform 1s;
+    cursor: pointer;
+    &:hover {
+      transform: scale(1.03);
+      box-shadow: 5px 7px 20px;
+    }
 
     @media only screen and (max-width: 1220px) {
       height: 699px;
@@ -87,6 +92,12 @@
     height: 100%;
     object-fit: cover;
     order: 2;
+    transition: box-shadow 0.2s, transform 1s;
+    cursor: pointer;
+    &:hover {
+      transform: scale(1.03);
+      box-shadow: 5px 7px 20px;
+    }
 
     @media only screen and (max-width: 1220px) {
       height: 699px;
@@ -119,6 +130,10 @@
     display: flex;
     gap: 26px;
     margin-bottom: 32px;
+  }
+
+  &__sub-title-galery {
+    color: #687480;
   }
 
   &__galery-text-title {
@@ -200,7 +215,7 @@
     width: 570px;
     height: 204px;
     background-color: #fff;
-    border-bottom: 1px solid black;
+    box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
     @media only screen and (max-width: 750px) {
       margin-left: -139px;
       top: 80%;
@@ -273,13 +288,17 @@
   width: 100%;
   margin: 0 auto;
   padding: 0 22px;
-  border: 1px solid black;
 
   &__header-title {
     font-weight: bold;
     margin-bottom: 60px;
     font-size: 48px;
     line-height: 100%;
+
+    @media only screen and (max-width: 1620px) {
+      max-width: 1190px;
+      margin: 0 auto 60px;
+    }
 
     @media only screen and (max-width: 750px) {
       font-size: 36px;
@@ -288,7 +307,6 @@
 
   &__galery {
     height: 990px;
-    border: 1px solid black;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -320,6 +338,12 @@
   }
 
   &__galery-photo {
+    transition: box-shadow 0.2s, transform 1s;
+    &:hover {
+      cursor: pointer;
+      transform: scale(1.03);
+      box-shadow: 2px 3px 27px 19px #1a5a4c67;
+    }
     @media only screen and (max-width: 1220px) {
       height: 100%;
     }
@@ -418,6 +442,12 @@
     line-height: 100%;
     background-color: #f14a27;
     border: none;
+    transition: box-shadow 0.2s ease-in-out;
+
+    &:hover {
+      box-shadow: -1px 1px 27px 7px #f1492779;
+      cursor: pointer;
+    }
 
     @media only screen and (max-width: 750px) {
       width: 50px;
