--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -46,12 +46,32 @@
     height: 260px;
     width: 2px;
     border: 1px solid rgba(255, 15, 6, 0.5);
+    position: relative;
 
     @media only screen and (max-width: 1100px) {
       max-width: 400px;
       width: 100%;
       height: 2px;
       margin: 20px auto;
+    }
+
+    @media only screen and (max-width: 500px) {
+      &::before {
+        position: absolute;
+        box-sizing: border-box;
+        content: "↑";
+        color: #1a5a4c;
+        font-size: 42px;
+        border: 1px solid #1a5a4c;
+        border-radius: 50%;
+        line-height: 99%;
+        font-weight: 300;
+        text-align: center;
+        right: 0;
+        bottom: 20px;
+        width: 50px;
+        height: 50px;
+      }
     }
   }
 
@@ -69,7 +89,7 @@
     }
 
     @media only screen and (max-width: 500px) {
-      gap: 15px;
+      gap: 1px;
       margin-top: 0;
     }
   }
@@ -86,6 +106,12 @@
       flex-direction: row;
       padding: 20px;
     }
+  }
+
+  &__namu {
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 100%;
   }
 
   &__logo-container-instgram-facebook {
@@ -120,12 +146,18 @@
       max-width: 170px;
       width: 100%;
       min-height: 103px;
+      font-size: 11px;
+      padding-right: 60px;
     }
   }
 
   &__center-middle-text {
     font-size: 14px;
     line-height: 150%;
+    min-width: 140px;
+    @media only screen and (max-width: 500px) {
+      font-size: 11px;
+    }
   }
 
   &__center-right-title {
@@ -134,7 +166,7 @@
 
   &__center-right-text {
     min-width: 170px;
-    max-height: 115px;
+    min-height: 115px;
     font-weight: normal;
     font-size: 14px;
     line-height: 150%;
@@ -143,6 +175,10 @@
       justify-content: space-between;
       min-width: 5px;
       width: 100%;
+    }
+    @media only screen and (max-width: 500px) {
+      font-size: 11px;
+      padding-right: 20px;
     }
   }
 
@@ -164,7 +200,15 @@
       font-size: 14px;
       line-height: 100%;
       margin-bottom: 20px 0;
+      @media only screen and (max-width: 500px) {
+        font-size: 11px;
+      }
     }
+  }
+
+  &__link-to-store {
+    text-decoration: none;
+    color: #0f0e08;
   }
 }
 
