--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,5 +1,4 @@
 .main-content {
-  border: 1px solid black;
   padding-right: 0;
   margin: 0 auto;
   max-width: 2000px;
@@ -14,7 +13,6 @@
   margin: 0 0 0 auto;
   padding: 0 0 0 20px;
   position: relative;
-  border: 1px solid black;
 
   @media only screen and (max-width: 700px) {
     flex-direction: column-reverse;
@@ -178,9 +176,15 @@
     background-color: #1a5a4c;
     width: 70px;
     height: 70px;
+
     @media only screen and (max-width: 700px) {
       width: 50px;
       height: 50px;
+    }
+
+    &:hover {
+      box-shadow: -1px 1px 20px 4px #1a5a4c5b;
+      cursor: pointer;
     }
   }
 }
