--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -2,11 +2,34 @@
   display: flex;
   flex-direction: column;
 
+  @include onDesktop {
+    max-width: 1280px;
+    align-self: center;
+  }
+
+  &__container {
+    @include onDesktop {
+      display: flex;
+      flex-direction: row;
+    }
+    
+  }
+
   &__links {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 50px 0 40px;
+
+    @include onTablet {
+      flex-direction: column;
+      justify-content: flex-start;
+      gap: 60px;
+    }
+
+    @include onDesktop {
+      padding-top: 65px;
+    }
   }
 
   &__media {
@@ -19,16 +42,36 @@
     display: flex;
     justify-content: space-between;
     gap: 20px;
+
+    @include onTablet {
+      padding-top: 35px;
+      justify-content: flex-start;
+      gap: 20px;
+    }
+
+    @include onDesktop {
+      padding-top: 50px;
+      gap: 0;
+    }
   }
 
   &__shedule {
     display: flex;
     flex-direction: column;
     width: 50%;
+
+    @include onTablet {
+      width: 40%;
+    }
+
+    @include onDesktop {
+      width: 240px;
+      margin-bottom: 84px;
+    }
   }
 
   &__title {
-    font-family: "IBM Plex Sans";
+    font-family: "IBM Plex Sans", sans-serif;
     font-size: 14px;
     font-weight: 400;
     line-height: 20px;
@@ -38,7 +81,7 @@
   }
 
   &__text {
-    font-family: "IBM Plex Sans";
+    font-family: "IBM Plex Sans", sans-serif;
     font-size: 14px;
     font-weight: 400;
     line-height: 21px;
@@ -54,6 +97,16 @@
     width: 50%;
     display: flex;
     flex-direction: column;
+
+    @include onTablet {
+      width: 30%;
+    }
+
+    @include onDesktop {
+      width: 240px;
+      padding-right: 60px;
+      margin-bottom: 84px;
+    }
   }
 
   &__lift-top {
@@ -66,7 +119,9 @@
     align-items: center;
     align-self: flex-end;
 
-
+    @include onTablet {
+      display: none;
+    }
   }
 
   &__icon {
@@ -79,12 +134,36 @@
     display: block;
     height: 1px;
     width: 100%;
-    background: #1A5A4C80;
+    background: #1a5a4c;
     margin: 20px 0 40px;
+
+    @include onTablet {
+      margin: 40px 0;
+    }
+
+    @include onDesktop {
+      width: 1px;
+      height: 260px;
+      margin-top: 60px;
+    }
+  }
+
+  &__copyright {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 300px;
+    align-self: center;
+
+    @include onTablet {
+      width: 100%;
+      justify-content: space-between;
+
+    }
   }
 
   &__desiner {
-    font-family: "IBM Plex Sans";
+    font-family: "IBM Plex Sans", sans-serif;
     font-size: 12px;
     font-weight: 300;
     line-height: 17px;
@@ -99,17 +178,79 @@
 .container-footer {
   padding: 0 20px;
   margin-bottom: 50px;
+
+  @include onTablet {
+    padding: 0 34px;
+  }
+
+  @include onDesktop {
+    padding: 0 56px;
+    display: flex;
+    justify-content: center;
+  }
 }
 
 .containet-nav-big {
   display: flex;
+  justify-content: space-between;
   gap: 20px;
   width: 100%;
   margin-bottom: 50px;
+
+  @include onTablet {
+    gap: 30px;
+    padding: 0 100px;
+  }
+
+  @include onDesktop {
+    gap: 60px;
+    padding: 0;
+  }
 }
 
 .container-nav {
   display: flex;
   flex-direction: column;
-  width: 50%;
+  align-self: flex-start;
+
+  @include onTablet {
+    width: 50%;
+  }
+}
+
+.container-footer-info {
+  display: flex;
+  flex-direction: column;
+
+  @include onTablet {
+    flex-direction: row;
+    gap: 50px;
+  }
+
+  @include onDesktop {
+    gap: 130px;
+    width: 650px;
+  }
+}
+
+.nav.nav--footer {
+  display: flex;
+  justify-content: space-between;
+  box-shadow: none;
+
+  @include onDesktop {
+    padding-left: 60px;
+    width: 50%;
+    padding-top: 50px;
+  }
+}
+
+.nav__list.nav__list--posit {
+  margin: 0;
+  width: 100%;
+
+  @include onDesktop {
+    padding-left: 0;
+    margin: 0;
+  }
 }
