--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 @import "utils";
+@import "utils/mixins";
 @import "fonts";
 @import "typography";
 @import "blocks/header";
@@ -13,6 +14,10 @@
 @import "blocks/gallery.scss";
 @import "blocks/news.scss";
 @import "blocks/footer.scss";
+
+html {
+  scroll-behavior: smooth;
+}
 
 body {
   margin: 0;
