--- a/src/styles/blocks/icon-menu.scss
+++ b/src/styles/blocks/icon-menu.scss
@@ -1,16 +1,19 @@
 .icon-menu {
-//   background-image: url(../images/Vector.svg);
-	background-size: contain;
+  background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
-	width: 18px;
-	height: 22px;
+  width: 18px;
+  height: 22px;
 
-	&--position {
-		position: absolute;
-		top: 32px;
-		left: 24px;
-		z-index: 1;
-	}
+  &--position {
+    position: absolute;
+    top: 32px;
+    left: 24px;
+    z-index: 2;
+
+    @include onTablet {
+      left: 34px;
+    }
+  }
 
 }
