--- a/src/styles/blocks/lection.scss
+++ b/src/styles/blocks/lection.scss
@@ -2,38 +2,66 @@
   
   &__picture {
     background-image: url(../images/lection.png);
-    background-position: left;
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     height: 210px;
     transition: transform linear 0.4s;
 
+    @include onTablet {
+      height: 390px;
+      margin: 0 34px;
+    }
+
+    @include onDesktop {
+      margin: 0;
+      height: 550px;
+    }
+
+    @include onBigDesktop {
+      height: 620px;
+    }
+
+    @include onTV {
+      height: 680px;
+    }
+
     &:hover {
       transform: scale(1.05);
+      cursor: pointer;
     }
   }
 
   &__details {
     display: flex;
     flex-direction: column;
-    align-self: center;
+    align-items: center;
     background-color: $colorWhite;
-    width: 280px;
+    width: 80%;
+    height: 150px;
     position: relative;
     bottom: 60px;
-    box-shadow: 0 2px 0 #1A5A4C40;
+    box-shadow: 0 2px 0 #1a5a4c40;
 
+    @include onTablet {
+      height: 200px;
+    }
+
+    @include onDesktop {
+      width: 500px;
+    }
   }
 
-  &__info{
+  &__info {
     display: flex;
+    gap: 40px;
     align-items: center;
     justify-content: space-between;
     padding: 25px 20px 15px;
   }
 
   &__gist {
-    font-family: "IBM Plex Sans";
+    font-family: "IBM Plex Sans", sans-serif;
     font-size: 16px;
     font-weight: 500;
     line-height: 16px;
@@ -43,7 +71,7 @@
   }
 
   &__data {
-    font-family: "IBM Plex Sans";
+    font-family: "IBM Plex Sans", sans-serif;
     font-size: 16px;
     font-weight: 700;
     line-height: 24px;
@@ -53,10 +81,9 @@
 
   &__name {
     display: flex;
-    // flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    font-family: "Montserrat";
+    font-family: "Montserrat", sans-serif;
     font-size: 28px;
     font-weight: 400;
     line-height: 28px;
@@ -64,6 +91,12 @@
     color: #0f0e08;
     padding: 0 20px;
     margin-bottom: 34px;
+
+    @include onTablet {
+      text-align: left;
+      font-size: 36px;
+      line-height: 36px;
+    }
   }
 }
 
@@ -72,4 +105,9 @@
   flex-direction: column;
   align-items: center;
   margin: 0 20px 100px;
+  text-decoration: none;
+
+  @include onDesktop {
+    margin-bottom: 200px;
+  }
 }
