--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -1,13 +1,28 @@
 .logo {
-	font-family: "Montserrat";
-	font-size: 30px;
-	font-weight: 700;
-	line-height: 30px;
-	text-align: left;
-	color: #0f0e08;
-	text-decoration: none;
+  display: flex;
+  font-family: "Montserrat", sans-serif;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 30px;
+  text-align: left;
+  color: #0f0e08;
+  text-decoration: none;
 
-	&--position {
-		margin: 9px auto 0;
-	}
+  &--position {
+    position: absolute;
+    top: 20px;
+    left: 45%;
+    right: 55%;
+    z-index: 1;
+
+  }
+
+  &--nav {
+    @include onDesktop {
+      left: 100px;
+      top: 20px;
+      right: 80%;
+    }
+  }
+
 }
