--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -1,52 +1,89 @@
 .nav {
-	background-color: $colorWhite;
-	display: flex;
-	flex-direction: column;
-	gap: 15px;
-	margin: 0;
-	align-items: center;
-	opacity: 0;
+  background-color: $colorWhite;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  margin: 0;
+  align-items: center;
+  opacity: 0;
+  transition: opacity linear 0.5s;
+  box-shadow: 0 6px 12px 0 gray;
 
-	&--footer {
-	  opacity: 1;
-	}
+  @include onDesktop {
+    box-shadow: none;
+  }
 
-	&--position {
-	height: 60vh;
+  &--footer {
+    opacity: 1;
+  }
+
+  &--position {
+    height: 310px;
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
-	}
+    z-index: 1;
 
-	&--activ {
-		opacity: 1;
-	
-	}
+    @include onTablet {
+      height: 400px;
+    }
 
-	&__list {
-		list-style: none;
-		// align-self: start;
-		padding: 0;
-		width: 100%;
+    @include onDesktop {
+      height: 100px;
+    }
+  }
 
-		&--position {
-		padding-left: 100px;
-		}
-	}
+  &--activ {
+    opacity: 1;
+  }
 
-	&__item {
-		padding: 3px;
-	}
+  &__list {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    list-style: none;
+    padding-left: 0;
+    margin-top: 100px;
+    width: 160px;
 
-	&__link {
-		text-decoration: none;
-		font-family: "Montserrat";
-		font-size: 14px;
-		font-weight: 400;
-		line-height: 14px;
-		text-align: left;
-		color: #0f0e08;
+    @include onTablet {
+      width: 200px;
+    }
 
-	}
+    @include onDesktop {
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      padding-left: 100px;
+      margin-top: 30px;
+    }
+
+  }
+
+  &__item {
+    padding: 3px;
+    text-align: left;
+    cursor: pointer;
+
+    @include onTablet {
+      padding: 6px;
+    }
+
+    @include onDesktop {
+      padding: 10px;
+    }
+  }
+
+  &__link {
+    text-decoration: none;
+    font-family: "Montserrat", sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 14px;
+    text-align: left;
+    color: #0f0e08;
+  }
+
 }
