--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -1,4 +1,13 @@
 .events {
+  display: block;
+  height: fit-content;
+
+  @include laptop {
+    display: flex;
+    margin: 0 auto;
+    width: fit-content;
+  }
+
   &__title {
     margin: 0 auto;
     padding-bottom: 40px;
@@ -10,6 +19,48 @@
 
     text-align: center;
     /*color: $dark-brown;*/
+
+    @media (min-width: 415px) {
+      display: inline-block;
+      width: fit-content;
+      padding-bottom: 60px;
+    }
+  }
+
+  &__image {
+    width: 100%;
+    border-radius: 10px;
+    transition: transform 0.3s ease,
+      border-radius 0.3s ease,
+      box-shadow 0.3s ease;
+
+    &:hover {
+      cursor: zoom-in;
+      box-shadow: 1px 1px 6px 6px $gray;
+      transform: scale(1.03);
+    }
+
+    @media (min-width: 415px) {
+      display: none;
+    }
+  }
+
+  &__image-desktop {
+    margin: 0 auto;
+    border-radius: 10px;
+    transition: transform 0.3s ease,
+      border-radius 0.3s ease,
+      box-shadow 0.3s ease;
+
+    &:hover {
+      cursor: zoom-in;
+      box-shadow: 1px 1px 6px 6px $gray;
+      transform: scale(1.03);
+    }
+
+    @media (max-width: 415px) {
+      display: none;
+    }
   }
 
   &__exhibition {
@@ -37,4 +88,34 @@
       transform: translateY(-7%);
     }
   }
+
+  &__exhibition-link {
+    text-decoration: none;
+
+    &:visited {
+      color: black;
+    }
+  }
+}
+
+@media (min-width: 1280px) {
+  .events__exhibition-1 {
+    display: flex;
+    gap: 130px;
+    margin-bottom: 100px;
+  }
+
+  .events__exhibition-2 {
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 130px;
+  }
+
+  .events__exhibition-description {
+    width: 370px;
+  }
+}
+
+.events__exhibition-link:hover {
+  color: $gray;
 }
