--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -3,20 +3,50 @@
   justify-content: center;
   margin: 0 auto;
 
+  @media (min-width: 768px) {
+    margin: 0;
+    /*float: left;*/
+    padding-left: 34px;
+    width: 220px;
+    height: 70px;
+  }
+
   &__input {
+    /*grid-row-start: 3;*/
     box-sizing: border-box;
     width: 230px;
     height: 50px;
     text-align: center;
     border: 1px solid $green;
+    transition: border 0.3s;
+    /*@include formDesktop;*/
+
+    &:hover {
+      border: 2px solid $green;
+    }
+
+    &:focus {
+      outline: none;
+    }
   }
 
   &__button {
     background-color: $green;
     @include button;
+    cursor: pointer;
+    flex-shrink: 0;
   }
 }
 
 /*.events__title {
   margin-top: 70px;
 }*/
+
+.button--color-orange {
+  background-color: $orange;
+}
+
+.input--position-left {
+  text-align: start;
+  padding-left: 31px;
+}
