--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -2,7 +2,12 @@ $c-gray: #eee;
 $green: #1a5a4c;
 $dark-brown: #0f0e08;
 $gray: #687480;
+$orange: #f14a27;
 
 $mobile-header-heigth: 320px;
 $mobile-header-width: 320px;
 $header-title-margin: calc(#{$mobile-header-heigth} + 20px);
+
+$icon-width: 18px;
+$header-padding: 23px;
+$header-padding-desktop: 37px;
