--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -155,6 +155,7 @@
     font-size: 14px;
     line-height: 150%;
     min-width: 140px;
+    color: #0f0e08;
     @media only screen and (max-width: 500px) {
       font-size: 11px;
     }
