--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -176,6 +176,8 @@
     background-color: #1a5a4c;
     width: 70px;
     height: 70px;
+    border: none;
+    transition: box-shadow 0.2s ease-in-out;
 
     @media only screen and (max-width: 700px) {
       width: 50px;
