--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -41,7 +41,7 @@
   &__info {
     display: flex;
     justify-content: space-between;
-    gap: 20px;
+    gap: 30px;
 
     @include onTablet {
       padding-top: 35px;
@@ -61,7 +61,7 @@
     width: 50%;
 
     @include onTablet {
-      width: 40%;
+      width: 300px;
     }
 
     @include onDesktop {
@@ -99,7 +99,7 @@
     flex-direction: column;
 
     @include onTablet {
-      width: 30%;
+      width: 300px;
     }
 
     @include onDesktop {
@@ -199,12 +199,15 @@
 
   @include onTablet {
     gap: 30px;
-    padding: 0 100px;
+    // padding: 0 100px;
+    padding-left: 100px;
+    width: 720px;
   }
 
   @include onDesktop {
     gap: 60px;
     padding: 0;
+    justify-content: flex-start;
   }
 }
 
@@ -214,7 +217,11 @@
   align-self: flex-start;
 
   @include onTablet {
-    width: 50%;
+    width: 300px;
+  }
+
+  @include onDesktop {
+    width: 150px;
   }
 }
 
