--- a/src/styles/blocks/news.scss
+++ b/src/styles/blocks/news.scss
@@ -70,6 +70,7 @@
     border: none;
     padding: 0;
     outline: none;
+    padding-left: 20px;
 
     @include onTablet {
       min-width: 395px;
@@ -77,7 +78,7 @@
     }
 
     &::placeholder {
-      padding-left: 20px;
+      // padding-left: 20px;
     }
   }
 
