--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -21,6 +21,9 @@
     height: 50px;
     width: 50px;
     background-color: $greenColor;
+    background-image: url("../images/arrow.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
     color: $lightgreyColor;
   }
 
