--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -61,6 +61,9 @@
     &__button {
       width: 70px;
       height: 70px;
+      background-image: url("../images/black-arrow.png");
+      background-repeat: no-repeat;
+      background-position: center center;
     }
   }
 
