--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -38,9 +38,14 @@
 
   &__info-link {
     border-bottom: 1px solid transparent;
-    cursor: default;
     color: $letterColor;
     width: fit-content;
+    transition: 1s;
+    &:hover {
+      transition: 0.6s;
+      transform: scale(1.05);
+      box-shadow: 0 1px 1px rgba(151, 138, 63, 0.46);
+    }
   }
 
   &__nav {
