--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -46,18 +46,20 @@
     background-size: cover;
     background-repeat: no-repeat;
     cursor: pointer;
+    transition: 0.6s;
     &:hover {
       transform: scale(1.5);
     }
   }
 
   &__nav {
-    position: absolute;
+    position: fixed;
     left: 0;
     right: 0;
     top: 0;
     opacity: 0;
     visibility: hidden;
+    transition: top 2s;
     transition-duration: 0.4s;
     background-color: $whiteColor;
     height: 120px;
