--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,8 @@
 $c-gray: #eee;
+$c-white: #fff;
+$c-green: #1a5a4c;
+$c-light-dark-grey: #687480;
+$c-dark-grey: #4e4e4e;
+$c-dark: #0f0e08;
+$c-red-grey: rgba(140, 104, 104, 0);
+$c-special-red: #f14a27;
