--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -60,9 +60,9 @@
         position: absolute;
         box-sizing: border-box;
         content: "↑";
-        color: #1a5a4c;
+        color: $c-green;
         font-size: 42px;
-        border: 1px solid #1a5a4c;
+        border: 1px solid $c-green;
         border-radius: 50%;
         line-height: 99%;
         font-weight: 300;
@@ -155,7 +155,7 @@
     font-size: 14px;
     line-height: 150%;
     min-width: 140px;
-    color: #0f0e08;
+    color: $c-dark;
     @media only screen and (max-width: 500px) {
       font-size: 11px;
     }
@@ -209,39 +209,9 @@
 
   &__link-to-store {
     text-decoration: none;
-    color: #0f0e08;
-  }
-}
-
-.copiryght {
-  &__footer-container {
-    max-width: 1300px;
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 0 90px;
-    @media only screen and (max-width: 1100px) {
-      margin-top: 100px;
-    }
-    @media only screen and (max-width: 700px) {
-      flex-direction: column;
-      justify-content: center;
-    }
-  }
-
-  &--for-museum {
-    margin-bottom: 40px;
-  }
-
-  &__text-design-by {
-    font-weight: 300;
-    font-size: 12px;
-    line-height: 140.62%;
-    @media only screen and (max-width: 700px) {
-      text-align: center;
-      margin-top: 14px;
+    color: $c-dark;
+    &:hover {
+      border-bottom: 1px solid rgba(0, 0, 0, 0.21);
     }
   }
 }
