--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,10 +1,3 @@
-.main-content {
-  padding-right: 0;
-  margin: 0 auto;
-  max-width: 2000px;
-  background-color: #fff;
-}
-
 .header {
   max-width: 1842px;
   width: 100%;
@@ -36,7 +29,7 @@
     font-size: 36px;
     font-weight: bold;
     line-height: 100%;
-    color: #0f0e08;
+    color: $c-dark;
   }
 
   &__uil-bars {
@@ -79,9 +72,9 @@
   &__text-opacity {
     position: absolute;
     font-weight: bold;
-    -webkit-text-fill-color: rgba(255, 255, 255, 0);
+    -webkit-text-fill-color: $c-red-grey;
     -webkit-text-stroke-width: 2px;
-    -webkit-text-stroke-color: #0f0e08;
+    -webkit-text-stroke-color: $c-red-grey;
     z-index: 10;
     @media only screen and (max-width: 700px) {
       font-weight: bold;
@@ -160,7 +153,7 @@
     font-family: "IBM Plex Sans", sans-serif;
     font-size: 16px;
     font-weight: 500;
-    color: #0f0e08;
+    color: $c-dark;
     @media only screen and (max-width: 700px) {
       width: 230px;
       height: 50px;
@@ -173,7 +166,7 @@
     align-items: center;
     font-size: 24px;
     color: white;
-    background-color: #1a5a4c;
+    background-color: $c-green;
     width: 70px;
     height: 70px;
     border: none;
