--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,10 @@
 @import "blocks/header.scss";
 @import "blocks/content-main.scss";
 @import "blocks/footer.scss";
+@import "blocks/copiryght.scss";
+@import "blocks/main-content.scss";
+@import "blocks/main-photo-footer.scss";
+@import "blocks/main-footer.scss";
 
 body {
   background: $c-gray;
