--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -6,6 +6,7 @@
   margin: 0;
   align-items: center;
   opacity: 0;
+  transform: translateX(-100%);
   transition: opacity linear 0.5s;
   box-shadow: 0 6px 12px 0 gray;
 
@@ -15,6 +16,7 @@
 
   &--footer {
     opacity: 1;
+    transform: translateX(0);
   }
 
   &--position {
@@ -36,6 +38,7 @@
 
   &--activ {
     opacity: 1;
+    transform: translateX(0);
   }
 
   &__list {
