--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -145,8 +145,6 @@
       width: 1px;
       height: 260px;
       margin-top: 60px;
-      position: absolute;
-      left: 51%;
     }
   }
 
@@ -194,22 +192,22 @@
 
 .containet-nav-big {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   gap: 20px;
   width: 100%;
   margin-bottom: 50px;
 
   @include onTablet {
+    justify-content: flex-start;
     gap: 30px;
-    // padding: 0 100px;
     padding-left: 100px;
-    width: 720px;
   }
 
   @include onDesktop {
     gap: 60px;
     padding: 0;
     justify-content: flex-start;
+
   }
 }
 
@@ -217,13 +215,14 @@
   display: flex;
   flex-direction: column;
   align-self: flex-start;
+  width: 50%;
 
   @include onTablet {
     width: 300px;
   }
 
   @include onDesktop {
-    width: 150px;
+    width: min-content;
   }
 }
 
@@ -238,7 +237,6 @@
 
   @include onDesktop {
     gap: 130px;
-    width: 650px;
   }
 }
 
@@ -249,7 +247,6 @@
 
   @include onDesktop {
     padding-left: 60px;
-    width: 50%;
     padding-top: 50px;
   }
 }
