--- a/src/styles/blocks/content-main.scss
+++ b/src/styles/blocks/content-main.scss
@@ -10,7 +10,7 @@
     line-height: 100%;
     margin-bottom: 60px;
 
-    @media only screen and (max-width: 450px) {
+    @media only screen and (max-width: $mobile-m) {
       font-size: 36px;
     }
   }
@@ -24,17 +24,17 @@
     gap: 130px;
     margin-bottom: 100px;
 
-    @media only screen and (max-width: 1220px) {
+    @media only screen and (max-width: $laptop-s) {
       grid-template-rows: 1fr 345px;
       grid-template-columns: 1fr;
       gap: 0;
     }
 
-    @media only screen and (max-width: 750px) {
+    @media only screen and (max-width: $tablet-m) {
       grid-template-rows: 260px 345px;
     }
 
-    @media only screen and (max-width: 450px) {
+    @media only screen and (max-width: $mobile-m) {
       grid-template-rows: 210px 110px;
     }
   }
@@ -47,17 +47,17 @@
     grid-template-columns: 2fr 4fr;
     gap: 130px;
 
-    @media only screen and (max-width: 1220px) {
+    @media only screen and (max-width: $laptop-s) {
       grid-template-rows: 1fr 345px;
       grid-template-columns: 1fr;
       gap: 0;
     }
 
-    @media only screen and (max-width: 750px) {
+    @media only screen and (max-width: $tablet-m) {
       grid-template-rows: 260px 345px;
     }
 
-    @media only screen and (max-width: 450px) {
+    @media only screen and (max-width: $mobile-m) {
       grid-template-rows: 210px 110px;
       grid-template-columns: 1fr;
     }
@@ -74,11 +74,11 @@
       box-shadow: 5px 7px 20px;
     }
 
-    @media only screen and (max-width: 1220px) {
+    @media only screen and (max-width: $laptop-s) {
       height: 699px;
     }
 
-    @media only screen and (max-width: 750px) {
+    @media only screen and (max-width: $tablet-m) {
       height: 100%;
     }
   }
@@ -95,12 +95,12 @@
       box-shadow: 5px 7px 20px;
     }
 
-    @media only screen and (max-width: 1220px) {
+    @media only screen and (max-width: $laptop-s) {
       height: 699px;
       order: 1;
     }
 
-    @media only screen and (max-width: 750px) {
+    @media only screen and (max-width: $tablet-m) {
       height: 100%;
     }
   }
@@ -110,7 +110,7 @@
     height: 97px;
     margin-top: 50px;
     order: 1;
-    @media only screen and (max-width: 750px) {
+    @media only screen and (max-width: $tablet-m) {
       max-width: 370px;
     }
   }
