--- a/src/styles/blocks/copiryght.scss
+++ b/src/styles/blocks/copiryght.scss
@@ -7,10 +7,10 @@
     flex-direction: row;
     justify-content: space-between;
     padding: 0 90px;
-    @media only screen and (max-width: 1100px) {
+    @media only screen and (max-width: $tablet-l) {
       margin-top: 100px;
     }
-    @media only screen and (max-width: 700px) {
+    @media only screen and (max-width: $tablet-s) {
       flex-direction: column;
       justify-content: center;
     }
@@ -24,7 +24,7 @@
     font-weight: 300;
     font-size: 12px;
     line-height: 140.62%;
-    @media only screen and (max-width: 700px) {
+    @media only screen and (max-width: $tablet-s) {
       text-align: center;
       margin-top: 14px;
     }
