--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -6,15 +6,15 @@
   padding: 0 35px;
   gap: 0 130px;
 
-  @media only screen and (max-width: 1380px) {
+  @media only screen and (max-width: $laptop-m) {
     gap: 0 61px;
   }
 
-  @media only screen and (max-width: 1100px) {
+  @media only screen and (max-width: $tablet-l) {
     flex-direction: row;
   }
 
-  @media only screen and (max-width: 700px) {
+  @media only screen and (max-width: $tablet-s) {
     flex-direction: column;
     min-height: 600px;
     padding: 0 20px;
@@ -28,15 +28,15 @@
     padding: 0 35px;
     gap: 0 130px;
 
-    @media only screen and (max-width: 1380px) {
+    @media only screen and (max-width: $laptop-m) {
       gap: 0 61px;
     }
 
-    @media only screen and (max-width: 1100px) {
+    @media only screen and (max-width: $tablet-l) {
       flex-direction: column;
     }
 
-    @media only screen and (max-width: 500px) {
+    @media only screen and (max-width: $mobile-m-plus) {
       min-height: 600px;
       padding: 0 20px;
     }
@@ -48,14 +48,14 @@
     border: 1px solid rgba(255, 15, 6, 0.5);
     position: relative;
 
-    @media only screen and (max-width: 1100px) {
+    @media only screen and (max-width: $tablet-l) {
       max-width: 400px;
       width: 100%;
       height: 2px;
       margin: 20px auto;
     }
 
-    @media only screen and (max-width: 500px) {
+    @media only screen and (max-width: $mobile-m-plus) {
       &::before {
         position: absolute;
         box-sizing: border-box;
@@ -81,14 +81,14 @@
     justify-content: space-between;
     gap: 0 138px;
 
-    @media only screen and (max-width: 1100px) {
+    @media only screen and (max-width: $tablet-l) {
       justify-content: space-between;
       max-width: 500px;
       width: 100%;
       margin: 0 auto;
     }
 
-    @media only screen and (max-width: 500px) {
+    @media only screen and (max-width: $mobile-m-plus) {
       gap: 1px;
       margin-top: 0;
     }
@@ -99,7 +99,7 @@
     flex-direction: column;
     gap: 62px;
     max-width: 100px;
-    @media only screen and (max-width: 700px) {
+    @media only screen and (max-width: $tablet-s) {
       justify-content: space-between;
       max-width: 600px;
       width: 100%;
@@ -118,13 +118,13 @@
     display: flex;
     flex-direction: row;
     gap: 20px;
-    @media only screen and (max-width: 700px) {
+    @media only screen and (max-width: $tablet-s) {
       gap: 40px;
     }
   }
 
   &__center-left-block {
-    @media only screen and (max-width: 500px) {
+    @media only screen and (max-width: $mobile-m-plus) {
       min-height: 196px;
       margin-bottom: 70px;
     }
@@ -141,7 +141,7 @@
     font-size: 14px;
     line-height: 150%;
     margin-bottom: 20px;
-    @media only screen and (max-width: 500px) {
+    @media only screen and (max-width: $mobile-m-plus) {
       min-width: 130px;
       max-width: 170px;
       width: 100%;
@@ -156,7 +156,7 @@
     line-height: 150%;
     min-width: 140px;
     color: $c-dark;
-    @media only screen and (max-width: 500px) {
+    @media only screen and (max-width: $mobile-m-plus) {
       font-size: 11px;
     }
   }
@@ -172,12 +172,12 @@
     font-size: 14px;
     line-height: 150%;
     margin-bottom: 20px;
-    @media only screen and (max-width: 700px) {
+    @media only screen and (max-width: $tablet-s) {
       justify-content: space-between;
       min-width: 5px;
       width: 100%;
     }
-    @media only screen and (max-width: 500px) {
+    @media only screen and (max-width: $mobile-m-plus) {
       font-size: 11px;
       padding-right: 20px;
     }
@@ -187,7 +187,7 @@
     display: flex;
     gap: 0 100px;
 
-    @media only screen and (max-width: 1100px) {
+    @media only screen and (max-width: $tablet-l) {
       justify-content: space-between;
       max-width: 500px;
       width: 100%;
@@ -201,7 +201,7 @@
       font-size: 14px;
       line-height: 100%;
       margin-bottom: 20px 0;
-      @media only screen and (max-width: 500px) {
+      @media only screen and (max-width: $mobile-m-plus) {
         font-size: 11px;
       }
     }
