--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -7,7 +7,7 @@
   padding: 0 0 0 20px;
   position: relative;
 
-  @media only screen and (max-width: 700px) {
+  @media only screen and (max-width: $tablet-s) {
     flex-direction: column-reverse;
     padding: 0;
     padding-bottom: 70px;
@@ -50,19 +50,19 @@
     background-repeat: no-repeat;
     background-position: bottom;
 
-    @media only screen and (max-width: 1220px) {
+    @media only screen and (max-width: $laptop-s) {
       height: 384px;
       width: 65%;
       background-position: center;
     }
 
-    @media only screen and (max-width: 700px) {
+    @media only screen and (max-width: $tablet-m) {
       width: 100%;
       min-height: 600px;
       background-position: bottom;
     }
 
-    @media only screen and (max-width: 510px) {
+    @media only screen and (max-width: $mobile-m-plus) {
       width: 100%;
       min-height: 300px;
       background-position: bottom;
@@ -72,11 +72,11 @@
   &__text-opacity {
     position: absolute;
     font-weight: bold;
-    -webkit-text-fill-color: $c-red-grey;
+    -webkit-text-fill-color: rgba(0, 0, 0, 0);
     -webkit-text-stroke-width: 2px;
-    -webkit-text-stroke-color: $c-red-grey;
+    -webkit-text-stroke-color: none;
     z-index: 10;
-    @media only screen and (max-width: 700px) {
+    @media only screen and (max-width: $tablet-s) {
       font-weight: bold;
       position: relative;
       -webkit-text-fill-color: black;
@@ -89,11 +89,11 @@
   &__ticket-title-container {
     margin-left: 177px;
 
-    @media only screen and (max-width: 980px) {
+    @media only screen and (max-width: $tablet-m-plus) {
       margin-left: 27px;
     }
 
-    @media only screen and (max-width: 700px) {
+    @media only screen and (max-width: $tablet-s) {
       margin: 0 auto;
     }
   }
@@ -105,22 +105,22 @@
     font-size: 74px;
     line-height: 100%;
 
-    @media only screen and (max-width: 1220px) {
+    @media only screen and (max-width: $laptop-s) {
       margin: 135px 0 0;
       font-size: 55px;
     }
 
-    @media only screen and (max-width: 880px) {
+    @media only screen and (max-width: $tablet-m-xx) {
       margin: 110px 0 0;
     }
 
-    @media only screen and (max-width: 700px) {
+    @media only screen and (max-width: $tablet-s) {
       font-size: 74px;
       margin: 20px 0;
       text-align: center;
     }
 
-    @media only screen and (max-width: 550px) {
+    @media only screen and (max-width: $mobile-l) {
       font-size: 45px;
     }
   }
@@ -132,11 +132,11 @@
     margin: 80px 40px 0 0;
     display: flex;
 
-    @media only screen and (max-width: 1220px) {
+    @media only screen and (max-width: $laptop-s) {
       margin: 40px 9px 0 0;
     }
 
-    @media only screen and (max-width: 700px) {
+    @media only screen and (max-width: $tablet-s) {
       height: 50px;
       width: 280px;
       margin: 0 auto;
@@ -154,7 +154,7 @@
     font-size: 16px;
     font-weight: 500;
     color: $c-dark;
-    @media only screen and (max-width: 700px) {
+    @media only screen and (max-width: $tablet-s) {
       width: 230px;
       height: 50px;
     }
@@ -172,7 +172,7 @@
     border: none;
     transition: box-shadow 0.2s ease-in-out;
 
-    @media only screen and (max-width: 700px) {
+    @media only screen and (max-width: $tablet-s) {
       width: 50px;
       height: 50px;
     }
