--- a/src/styles/blocks/main-photo-footer.scss
+++ b/src/styles/blocks/main-photo-footer.scss
@@ -31,7 +31,7 @@
     color: $c-white;
     margin-bottom: 66px;
 
-    @media only screen and (max-width: 750px) {
+    @media only screen and (max-width: $tablet-m) {
       width: 280px;
       height: 54px;
       font-weight: 300;
@@ -54,7 +54,7 @@
     line-height: 100%;
     margin-right: 30px;
 
-    @media only screen and (max-width: 750px) {
+    @media only screen and (max-width: $tablet-m) {
       width: 233px;
       height: 50px;
       padding: 18px 31px;
@@ -76,7 +76,7 @@
       cursor: pointer;
     }
 
-    @media only screen and (max-width: 750px) {
+    @media only screen and (max-width: $tablet-m) {
       width: 50px;
       height: 50px;
     }
