--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -6,3 +6,15 @@ $c-dark-grey: #4e4e4e;
 $c-dark: #0f0e08;
 $c-red-grey: rgba(140, 104, 104, 0);
 $c-special-red: #f14a27;
+
+$mobile-m: 450px;
+$mobile-m-plus: 500px;
+$mobile-l: 550px;
+$tablet-s: 700px;
+$tablet-m: 750px;
+$tablet-m-xx: 880px;
+$tablet-m-plus: 980px;
+$tablet-l: 1100px;
+$laptop-s: 1220px;
+$laptop-m: 1380px;
+$pc-m: 1620px;
