--- a/src/styles/blocks/main-footer.scss
+++ b/src/styles/blocks/main-footer.scss
@@ -10,12 +10,12 @@
     font-size: 48px;
     line-height: 100%;
 
-    @media only screen and (max-width: 1620px) {
+    @media only screen and (max-width: $pc-m) {
       max-width: 1190px;
       margin: 0 auto 60px;
     }
 
-    @media only screen and (max-width: 750px) {
+    @media only screen and (max-width: $tablet-m) {
       font-size: 36px;
     }
   }
@@ -27,14 +27,14 @@
     flex-wrap: wrap;
     gap: 30px;
 
-    @media only screen and (max-width: 1620px) {
+    @media only screen and (max-width: $pc-m) {
       & :nth-child(3),
       & :nth-child(6) {
         display: none;
       }
     }
 
-    @media only screen and (max-width: 1220px) {
+    @media only screen and (max-width: $laptop-s) {
       max-height: 600px;
       flex-direction: row;
       flex-wrap: nowrap;
@@ -59,12 +59,12 @@
       transform: scale(1.03);
       box-shadow: 2px 3px 27px 19px #1a5a4c67;
     }
-    @media only screen and (max-width: 1220px) {
+    @media only screen and (max-width: $laptop-s) {
       height: 100%;
     }
   }
 
-  @media only screen and (max-width: 1220px) {
+  @media only screen and (max-width: $laptop-s) {
     &__round-items {
       display: flex;
       flex-direction: row;
