--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -13,6 +13,33 @@
     padding-bottom: 70px;
   }
 
+  &__extion-text {
+    @media only screen and (max-width: 1299px) {
+      display: none;
+    }
+    @media only screen and (min-width: 1300px) {
+      text-transform: uppercase;
+      position: absolute;
+      font-weight: bold;
+      font-size: 14px;
+      line-height: 100%;
+      color: #687480;
+      bottom: 10%;
+      left: 9%;
+      transform: rotate(-90deg);
+      &::after {
+        position: absolute;
+        width: 70px;
+        height: 1px;
+        color: red;
+        left: -100px;
+        top: 5px;
+        border-bottom: 1px solid #1a5a4c;
+        content: "";
+      }
+    }
+  }
+
   &__burger-logo-container {
     position: absolute;
     top: 2%;
