--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -83,7 +83,7 @@
       background-position: center;
     }
 
-    @media only screen and (max-width: $tablet-m) {
+    @media only screen and (max-width: $tablet-s) {
       width: 100%;
       min-height: 600px;
       background-position: bottom;
