--- a/src/styles/blocks/card.scss
+++ b/src/styles/blocks/card.scss
@@ -1,9 +1,12 @@
 .card {
   padding-bottom: 60px;
+  max-width: 370px;
+
   &__image {
     display: block;
     width: 280px;
     height: 210px;
+    margin: 0 auto;
   }
 
   &__subscriptions {
