--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -53,3 +53,37 @@
     gap: 24px;
   }
 }
+
+.links {
+  display: flex;
+  padding: 70px 0;
+  gap: 54px;
+
+  &__left,
+  &__right {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    font-family: "IBM Plex Sans", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 100%;
+  }
+
+  &__link {
+    color: #0f0e08;
+    text-decoration: none;
+  }
+}
+
+.bottom {
+  &__description,
+  &__subscription {
+    font-family: "IBM Plex Sans", sans-serif;
+    text-align: center;
+    font-weight: 300;
+    font-size: 12px;
+    line-height: 16.88px;
+  }
+}
