--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -21,8 +21,12 @@
   background-image: url(../images/header-small.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
+  background-position: top;
   z-index: -1;
+
+  @media (min-width: 768px) {
+    width: 505px;
+  }
 }
 
 .menu-icon {
@@ -62,4 +66,8 @@
     top: -1px;
     background-color: #1a5a4c;
   }
+}
+
+.menu {
+  display: none;
 }
