--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -26,5 +26,11 @@
     object-fit: fill;
     object-position: center;
     z-index: -1;
+
+    @media (max-width: 768px) {
+      max-width: 700px;
+      margin: 0 auto;
+      
+    }
   }
 }
