fixed all max-width

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -20,3 +20,7 @@ $laptop-m: 1380px;
 $pc-m: 1620px;
 
 $mx-width-header: 1842px;
+$mx-width-main: 1570px;
+$mx-width-copiryght: 1300px;
+$mx-width-main-content: 2000px;
+$mx-width-main-footer: 1620px;
