--- a/src/styles/blocks/copiryght.scss
+++ b/src/styles/blocks/copiryght.scss
@@ -1,6 +1,6 @@
 .copiryght {
   &__footer-container {
-    max-width: 1300px;
+    max-width: $mx-width-copiryght;
     width: 100%;
     margin: 0 auto;
     display: flex;
