--- a/src/styles/blocks/main-content.scss
+++ b/src/styles/blocks/main-content.scss
@@ -1,6 +1,6 @@
 .main-content {
   padding-right: 0;
   margin: 0 auto;
-  max-width: 2000px;
+  max-width: $mx-width-main-content;
   background-color: $c-white;
 }
