--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,5 +2,38 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+  font-size: 14px;
+  font-weight: 400;
+  font-family: "IBM Plex Sans", sans-serif;
+  color: #0f0e08;
+}
+
+body {
+  background-color: #fff;
+  max-width: 1920px;
+  margin: 0 auto;
+}
+
+ul,
+li,
+h1,
+h2,
+h3 {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  margin: 0;
+  text-decoration: none;
+  color: inherit;
+}
+
 @import "./utils.scss";
 @import "./blocks.scss";
