--- a/src/styles/blocks/card.scss
+++ b/src/styles/blocks/card.scss
@@ -2,10 +2,13 @@
   padding-bottom: 60px;
   max-width: 370px;
 
+  // @media (min-width: 768px) {
+    
+  // }
+
   &__image {
     display: block;
-    width: 280px;
-    height: 210px;
+    width: 100%;
     margin: 0 auto;
   }
 
