--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -3,6 +3,12 @@
   font-style: normal;
   font-weight: normal;
 
+  @media (min-width: 768px) {
+    &__header {
+      display: grid;
+    }
+  }
+
   &__body {
     margin: 0;
     background-color: #fff;
@@ -17,8 +23,4 @@
     text-align: center;
     text-transform: uppercase;
   }
-}
-
-a {
-  text-decoration: none;
 }
