--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,13 +2,13 @@
   box-sizing: border-box;
 }
 
-html {
-  scroll-behavior: smooth;
-  font-size: 14px;
-  font-weight: 400;
-  font-family: "IBM Plex Sans", sans-serif;
-  color: #0f0e08;
-}
+// html {
+//   scroll-behavior: smooth;
+//   font-size: 14px;
+//   font-weight: 400;
+//   font-family: "IBM Plex Sans", sans-serif;
+//   color: #0f0e08;
+// }
 
 body {
   background-color: #fff;
@@ -20,7 +20,8 @@ ul,
 li,
 h1,
 h2,
-h3 {
+h3,
+p {
   margin: 0;
   padding: 0;
 }
