--- a/src/styles/blocks/announcement.scss
+++ b/src/styles/blocks/announcement.scss
@@ -9,6 +9,14 @@
   box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
   z-index: 1;
 
+  @media (min-width: 768px) {
+    top: -84px;
+    width: 570px;
+    height: 204px;
+    padding-left: 100px;
+    padding-right: 100px;
+  }
+
   &__subscriptions {
     font-family: "IBM Plex Sans", sans-serif;
     display: flex;
@@ -23,6 +31,10 @@
     font-size: 16px;
     line-height: 100%;
     color: #687480;
+
+    @media (min-width: 768px) {
+      font-size: 14px;
+    }
   }
 
   &__date {
@@ -30,6 +42,10 @@
     font-size: 16px;
     line-height: 150%;
     color: #1a5a4c;
+
+    @media (min-width: 768px) {
+      font-size: 14px;
+    }
   }
 
   &__title {
@@ -41,5 +57,10 @@
     line-height: 100%;
     color: #0f0e08;
     text-align: center;
+
+    @media (min-width: 768px) {
+      text-align: left;
+      font-size: 36px;
+    }
   }
 }
