--- a/src/styles/blocks/card.scss
+++ b/src/styles/blocks/card.scss
@@ -2,14 +2,40 @@
   padding-bottom: 60px;
   max-width: 370px;
 
-  // @media (min-width: 768px) {
-    
-  // }
+  @media (min-width: 768px) {
+    display: grid;
+    grid-template-columns: repeat(6, 100px);
+    grid-template-rows: auto auto auto auto;
+    gap: 20px;
+
+    grid-template-areas: "image image image image image image";
+  }
+
+  @media (min-width: 1920px) {
+    display: grid;
+    grid-template-columns: repeat(16, 70px);
+    gap: 30px;
+  }
 
   &__image {
     display: block;
     width: 100%;
     margin: 0 auto;
+    grid-area: image;
+
+    @media (min-width: 768px) {
+      grid-area: 1 / 1 / 2 / -1;
+    }
+  }
+
+  &__container {
+    @media (min-width: 768px) {
+      grid-area: 2 / 1 / 3 / 4;
+    }
+
+    @media (min-width: 1920px) {
+      grid-area: text;
+    }
   }
 
   &__subscriptions {
@@ -18,6 +44,10 @@
     justify-content: space-between;
     align-items: center;
     margin-top: 16px;
+
+    @media (min-width: 768px) {
+      grid-area: 2 / 1 / 3 / 3;
+    }
   }
 
   &__subtitle {
@@ -26,6 +56,10 @@
     font-size: 16px;
     line-height: 100%;
     color: #687480;
+
+    @media (min-width: 768px) {
+      font-size: 14px;
+    }
   }
 
   &__date {
@@ -33,6 +67,10 @@
     font-size: 16px;
     line-height: 150%;
     color: #1a5a4c;
+
+    @media (min-width: 768px) {
+      font-size: 14px;
+    }
   }
 
   &__title {
@@ -42,6 +80,11 @@
     font-size: 28px;
     line-height: 36px;
     color: #0f0e08;
+
+    @media (min-width: 768px) {
+      grid-area: 3 / 1 / 4 / 4;
+      font-size: 36px;
+    }
 
     &::before {
       content: "";
@@ -53,6 +96,11 @@
       width: 10px;
       height: 10px;
       background-color: #f14a27;
+
+      @media (min-width: 768px) {
+        width: 15px;
+        height: 15px;
+      }
     }
   }
 
@@ -63,5 +111,9 @@
     font-size: 16px;
     line-height: 150%;
     color: #4e4e4e;
+
+    @media (min-width: 768px) {
+      grid-area: 4 / 1 / 5 / 4;
+    }
   }
 }
