--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -1,5 +1,9 @@
 .main {
   padding: 0 20px;
+
+  @media (min-width: 768px) {
+    padding: 0 34px;
+  }
   
   &__title {
     margin: 90px 0 40px;
@@ -8,6 +12,11 @@
     font-size: 36px;
     line-height: 100%;
     color: #0f0e08;
+
+    @media (min-width: 768px) {
+      text-align: left;
+      font-size: 48px;
+    }
   }
 
   &__section {
@@ -15,7 +24,9 @@
   }
 
   &__middle {
-    padding-bottom: 197px;
+    @media (max-width: 767px) {
+      padding-bottom: 197px;
+    }
   }
 
   &__image {
@@ -26,10 +37,26 @@
     object-fit: fill;
     object-position: center;
     z-index: -1;
-
-    @media (max-width: 768px) {
-      max-width: 700px;
+    
+    @media (min-width: 768px) {
       margin: 0 auto;
+      height: 390px;
+      position: relative;
+      grid-area: banner;
+    }
+
+    @media (min-width: 1920px) {
+      height: 674px;
+    }
+
+    &_container {
+      @media (min-width: 768px) {
+        grid-template-columns: repeat(6, 100px);
+        grid-template-rows: 1fr;
+        gap: 20px;
+
+        grid-template-areas: "banner banner banner banner banner banner";
+      }
     }
   }
 }
