--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -41,10 +41,14 @@
   }
   
   &__image {
-    width: 100%;
+    height: 410px;
     margin: 0 auto;
-    height: 50%;
+    // height: 50%;
     transition: transform 0.5s ease;
+
+    @media (min-width: 768px) {
+      height: 543px;
+    }
 
     &:hover {
       cursor: zoom-out;
