--- a/src/styles/blocks/info.scss
+++ b/src/styles/blocks/info.scss
@@ -9,18 +9,28 @@
   }
 
   &__schedules {
-    min-width: 130px;
+    font-size: 14px;
+    line-height: 150%;
+    color: #0f0e08;
+    grid-area: schedules;
 
     @media (min-width: 768px) {
       grid-area: 1 / 2 / 2 / 4;
     }
   }
 
-  &__subscription {
-    margin-top: 20px;
+  &__contacts {
+    font-size: 14px;
+    line-height: 150%;
+    color: #0f0e08;
+    grid-area: contacts;
 
     @media (min-width: 768px) {
-      grid-area: 1 / 4 / 2 / 5;
+      grid-area: 1 / 4 / 2 / 6;
     }
+  }
+
+  &__subscription {
+    margin-top: 20px;
   }
 }
